components/ServicesSearch/ServicesSearch.scss
$blue-border: transparentize($vibrant-blue, 0.8);
#services-search {
	margin-bottom: $global-padding-vertical;
	display: flex;
	flex-direction: column;
	align-items: center;
	h1 {
		font-weight: 600;
		font-size: 1.7rem;
		margin-bottom: 4rem;

		@media #{$mq-phone} {
			text-align: center;
		}
	}
	.round {
		border: 1px solid $round-border-color;
		// background-color: $round-bg-color;
		// background-color: rgba(255,255,255,0.05);
		background-color: $bg-light-color;
		// background-color: rgba(255, 69, 0, 1);
		border-radius: 50%;
	}
	.round-bg {
		border-radius: $round-bg-radius;
		height: $services-height;
		min-height: 400px;
		width: $services-width;
		@media #{$mq-phone} {
			width: 85vw;
		}
		position: relative;
		transition: all 0.4s ease-out;
		&:active {
			border-color: $blue-border;
		}
		div#top-part {
			$search-bar-height: 2rem;
			$search-bar-padding-vertical: 0.25rem;
			$search-bar-padding-horizontal: 3vw;
			$whole-height: calc(
				#{$search-bar-height} + #{$search-bar-padding-vertical}
			);

			margin-top: calc(
				(-#{$search-bar-height} / 2) - #{$search-bar-padding-vertical}
			);
			height: $whole-height;
			position: relative;
			div#search-bar {
				$input-font-size: 0.8rem;
				width: 40%;
				margin-left: 1.5rem;
				@media #{$mq-phone} {
					margin-right: 3rem;
					width: auto;
				}
				height: 100%;
				.fa-search {
					position: absolute;
					left: 40%;
					@media #{$mq-phone} {
						// left: 0;
						left: unset;
						right: 3rem;
					}
					font-size: 0.8rem;
					top: calc(
						#{$search-bar-padding-vertical} + (#{$search-bar-height} -
									#{$search-bar-padding-vertical} * 2 - #{$input-font-size})
					);
					opacity: 0.5;
					z-index: 5;
					transition: all 0.25s ease-in-out;
					&:hover {
						cursor: pointer;
					}
				}
				input#search-bar {
					font-family: "Montserrat", sans-serif;
					width: 100%;
					height: 100%;
					color: transparentize($vibrant-blue, 0.2);
					border-radius: 2rem;
					font-size: $input-font-size;
					padding-top: $search-bar-padding-vertical;
					padding-bottom: $search-bar-padding-vertical;
					padding-left: $search-bar-padding-horizontal;
					padding-right: 0;
					transition: all 0.25s ease-in-out;
					&:focus {
						outline: none !important;
						border-color: $blue-border;
						& + .fa-search {
							color: $vibrant-blue;
							opacity: 0.8;
						}
						&::placeholder {
							color: $vibrant-blue;
						}
					}
					&::placeholder {
						opacity: 0.6;
						--vw: 1vw;
						--rem: 0.5rem;
						font-size: calc(var(--vw) / var(--rem));
						transition: color 1.5s ease-out;
					}
				}
			}
			div#view-type {
				height: 100%;
				width: 4rem;
				@media #{$mq-phone} {
					display: none;
				}
				border-radius: 2rem;
				padding: $search-bar-padding-vertical 0.5rem;
				display: flex;
				flex-direction: row;
				justify-content: space-evenly;
				align-items: center;
				position: absolute;
				right: 2rem;
				top: 0;
				svg {
					cursor: pointer;
					opacity: 0.6;
					transition: all 0.25s ease-in-out;
					&.fa-list {
						@media #{$mq-phone} {
							width: 0;
							height: 0;
							pointer-events: none;
							display: none;
						}
					}
					&:hover {
						opacity: 0.8;
					}
					&.active {
						color: $vibrant-blue;
					}
				}
			}
		}
		$top: 10%;
		$left: 5%;
		$border-radius: 1rem;
		$padding: 2rem;
		$width: calc(100% - #{$left} - #{$padding} * 2);
		$height: calc(100% - #{$top} * 1.5 - #{$padding} * 2);
		$scrollbar-width: 11px;
		div#gradient-overlay {
			position: absolute;
			left: $left;
			top: $top;
			border-radius: $border-radius;
			width: calc(#{$width} - #{$scrollbar-width});
			height: $height;
			padding: $padding;
			padding-right: 0;
			pointer-events: none;
			z-index: 20;
			background: linear-gradient(
				to bottom,
				transparentize($bg-light-color, 0.1) 0%,
				rgba(41, 137, 216, 0) 9%,
				rgba(32, 124, 202, 0) 93%,
				rgba(30, 110, 179, 0) 94%,
				transparentize($bg-light-color, 0.1) 100%
			); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#151b2b', endColorstr='#151b2b',GradientType=0 ); /* IE6-9 */
		}
		div#services-container {
			overflow-y: scroll;
			border-radius: $border-radius;
			position: absolute;
			top: $top;
			left: $left;
			width: $width;
			height: $height;
			transition: color 2s ease-in;
			padding: $padding;
			padding-right: 0;
			// background-color: $bg-color;
			// background-color: 
			// padding-top: 0;
			color: #121726;
			@media not screen and (pointer: fine) {
				// For elements without mouse support
				color: $vibrant-blue;
			}
			&:hover {
				&::-webkit-scrollbar-thumb {
					background-color: $vibrant-blue;
				}
				color: $vibrant-blue;
				transition: color 1s ease-out;
			}
			.services-group-move {
				transition: transform 1s;
			}
			#nothing-found {
				display: flex;
				flex-direction: column;
				background-color: transparentize(white, 0.2);
				border-radius: 2rem;
				// position: absolute;
				// top: 50%;
				// left: 50%;
				// transform: translate(-50%, -50%);
				margin-right: 2rem;
				// width: 61%;
				// height: 60%;
				padding: 2rem 5vw;
				box-sizing: border-box;
				color: #0a1020;
				#title {
					font-weight: 800;
					font-size: 1.4rem;
					@media #{$mq-phone} {
						font-size: 1.1rem;
					}
				}
				#description {
					margin-top: 1rem;
					font-weight: 500;
					margin-bottom: 1rem;
					@media #{$mq-phone} {
						font-size: 0.8rem;
					}
				}
				#buttons {
					margin-top: auto;
					display: flex;
					flex-direction: row;
					justify-content: space-evenly;
					align-items: flex-end;
					flex-wrap: wrap;
					width: 100%;
					height: 100%;
					align-content: space-evenly;
					a {
						border-radius: 2rem;
						background-color: $vibrant-blue;
						display: flex;
						justify-content: center;
						align-items: center;
						padding: 0 1rem;
						text-align: center;
						height: 2.5rem;
						color: inherit;
						text-decoration: none;
						br {
							display: none;
						}
						&#call-us {
							@media screen and (pointer: fine) {
								// Disable telephone link on non-touch-screens
								pointer-events: inherit;
								a:-webkit-any-link {
									cursor: default;
								}
							}
						}
						svg {
							margin-right: 1vw;
						}
						font-weight: 500;
						font-size: 0.7rem;
					}
				}
				transition: opacity 0.5s ease-out;
				&:not(.visible) {
					transition: opacity 1s ease-out, visibility 0s ease-in 2s,
						position 0s ease-in 2s;
					opacity: 0;
					pointer-events: none;
					// transform: translate(-50%, 80%);
					// display: none;
					position: absolute;
					visibility: hidden;
				}
				@media screen and (max-width: 1000px) {
					min-height: 55%;
					#buttons {
						height: 10rem;
						flex-direction: column;
						justify-self: center;
						align-items: center;
						br {
							display: block !important;
						}
					}
				}
				transition: top 2s ease-out, transform 2s ease-out;
				@media screen and (min-width: 800px) {
					position: absolute;
					top: 50%;
					transform: translateY(-50%);
				}
			}
			#services-group {
				display: flex;
				flex-wrap: wrap;
				justify-content: space-between;
				height: 100%;
				&.nothing-found {
					height: 0;
				}
			}
			&::-webkit-scrollbar {
				position: absolute;
				right: -5rem;
				width: $scrollbar-width;
				&:hover {
					cursor: pointer;
					transition: all 1s ease-out;
					color: white;
				}
			}
			&::-webkit-scrollbar-track {
				transition: all 2s ease-out;
				background-color: #121726;
				border-radius: 0.5rem;
			}
			&::-webkit-scrollbar-thumb {
				border-radius: 0.5rem;
				// opacity: 0.4;
				box-shadow: inset 0 0 0 10px;
				transition: all 0.25s ease-in-out;
			}
		}
	}
}

